--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,185 +10,190 @@
 </head>
 
 <body class="page__body">
-  <header class="page-header">
-    <a class="page-header__logo" href="index.html">
-      <picture>
-        <source media="(min-width: 1200px)" srcset="img/vector/logo-desktop.svg">
-        <source media="(min-width: 768px)" srcset="img/vector/logo-tablet.svg">
-        <img class="page-header__logo-image" src="img/vector/logo-mobile.svg" width="102" height="84"
-          alt="Логотип города Седоны">
-      </picture>
-    </a>
-    <nav class="page-header__main-nav main-nav main-nav--nojs">
-      <ul class="main-nav__list">
-        <li class="main-nav__item">
-          <a class="main-nav__link" href="index.html">Главная</a>
-        </li>
-        <li class="main-nav__item">
-          <a class="main-nav__link" href="catalog.html">Фото и видео</a>
-        </li>
-        <li class="main-nav__item">
-          <a class="main-nav__link" href="form.html">Форма отзыва</a>
-        </li>
-        <li class="main-nav__item">
-          <a class="main-nav__link" href="#">HTML Academy</a>
-        </li>
-      </ul>
-      <button class="main-nav__toggle">
-        <span class="visually-hidden">Закрыть</span>
-      </button>
-    </nav>
-    <div class="page-header__intro intro intro--short">
-      <img class="intro__slogan intro__slogan--short" src="img/vector/intro-text-inner.svg"
-        alt="Приветствие города Седоны">
-    </div>
-  </header>
 
-  <main class="page-main">
-    <h1 class="page-main__heading">Фото и видео</h1>
-    <p class="page-main__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о
-      политике
-      и экономике.</p>
-    <section class="photos">
-      <h2 class="visually-hidden">Фотографии</h2>
-      <ul class="photos__list">
-        <li class="photos__item photos__item--top">
-          <div class="photos__image-wrapper">
-            <picture>
-              <source media="(min-width: 768px)"
-                srcset="img/photos/photo-1-desktop.jpg 1x, img/photos/photo-1-desktop@2x.jpg 2x">
-              <img class="photos__image" src="img/photos/photo-1-mobile.jpg"
-                srcset="img/photos/photo-1-mobile@2x.jpg 2x" alt="Пейзаж окрестностей Седоны в закат">
-            </picture>
-          </div>
-          <div class="photos__wrapper">
-            <div class="photos__text-wrapper">
-              <h3 class="photos__title">Неродные просторы</h3>
-              <p class="photos__author">Автор фото: Борис</p>
-            </div>
-            <button class="photos__likes-button">
-              <span class="photos__likes-number">1350</span>
-            </button>
-          </div>
-        </li>
-        <li class="photos__item">
-          <div class="photos__image-wrapper">
-            <picture>
-              <source media="(min-width: 768px)"
-                srcset="img/photos/photo-2-desktop.jpg 1x, img/photos/photo-2-desktop@2x.jpg 2x">
-              <img class="photos__image" src="img/photos/photo-2-mobile.jpg"
-                srcset="img/photos/photo-2-mobile@2x.jpg 2x" alt="Флора Седоны">
-            </picture>
-          </div>
-          <div class="photos__wrapper">
-            <div class="photos__text-wrapper">
-              <h3 class="photos__title">Местная растительность</h3>
-              <p class="photos__author">Автор фото: Сергей</p>
-            </div>
-            <button class="photos__likes-button">
-              <span class="photos__likes-number">143</span>
-            </button>
-          </div>
-        </li>
-        <li class="photos__item">
-          <div class="photos__image-wrapper">
-            <picture>
-              <source media="(min-width: 768px)"
-                srcset="img/photos/photo-3-desktop.jpg 1x, img/photos/photo-3-desktop@2x.jpg 2x">
-              <img class="photos__image" src="img/photos/photo-3-mobile.jpg"
-                srcset="img/photos/photo-3-mobile@2x.jpg 2x" alt="Дорога за пределами Седоны">
-            </picture>
-          </div>
-          <div class="photos__wrapper">
-            <div class="photos__text-wrapper">
-              <h3 class="photos__title">Дорога на север</h3>
-              <p class="photos__author">Автор фото: Петр</p>
-            </div>
-            <button class="photos__likes-button">
-              <span class="photos__likes-number">96</span>
-            </button>
-          </div>
-        </li>
-        <li class="photos__item">
-          <div class="photos__image-wrapper">
-            <picture>
-              <source media="(min-width: 768px)"
-                srcset="img/photos/photo-4-desktop.jpg 1x, img/photos/photo-4-desktop@2x.jpg 2x">
-              <img class="photos__image" src="img/photos/photo-4-mobile.jpg"
-                srcset="img/photos/photo-4-mobile@2x.jpg 2x" alt="Вид на мост Дьявола">
-            </picture>
-          </div>
-          <div class="photos__wrapper">
-            <div class="photos__text-wrapper">
-              <h3 class="photos__title">Мост дьявола</h3>
-              <p class="photos__author">Автор фото: Антон</p>
-            </div>
-            <button class="photos__likes-button">
-              <span class="photos__likes-number">254</span>
-            </button>
-          </div>
-        </li>
-      </ul>
-    </section>
-    <section class="video-presentation">
-      <h2 class="visually-hidden">Видеопрезентация</h2>
-      <p class="video-presentation__doubts">Все еще сомневаетесь?</p>
-      <p class="video-presentation__watch">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в
-        очередной раз!</p>
+  <div class="container">
 
-      <picture>
-        <source media="(min-width: 1200px)"
-          srcset="img/photos/video-desktop.jpg 1x, img/photos/video-desktop@2x.jpg 2x">
-        <source media="(min-width: 768px)" srcset="img/photos/video-tablet.jpg 1x, img/photos/video-tablet@2x.jpg 2x">
-        <img class="video-presentation__preview" src="img/photos/video-mobile.jpg"
-          srcset="img/photos/video-mobile@2x.jpg 2x" alt="Обложка видеопрезентации">
-      </picture>
-
-      <video class="video-presentation__clip">
-
-
-        <!-- Тут надо стилизовать видео -->
-      </video>
-
-    </section>
-
-  </main>
-
-  <footer class="footer">
-    <a class="footer__tag" href="#">#visitsedona</a>
-    <ul class="footer__social social">
-      <li class="social__item">
-        <a class="social__link" aria-label="Мы в Твиттере">
-          <svg width="18" height="15">
-            <use xlink:href="img/sprite.svg#icon-twitter"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="social__item">
-        <a class="social__link" aria-label="Мы в Фейсбуке">
-          <svg width="9" height="19">
-            <use xlink:href="img/sprite.svg#icon-facebook"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="social__item">
-        <a class="social__link" aria-label="Мы в Ютубе">
-          <svg width="20" height="14">
-            <use xlink:href="img/sprite.svg#icon-youtube"></use>
-          </svg>
-        </a>
-      </li>
-    </ul>
-    <div class="footer__copyright copyright">
-      <p class="copyright__text">Разработано</p>
-      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"
-        aria-label="Онлайн-курс HTML Academy «Адаптивная вёрстка сайтов и автоматизация»">
-        <svg class="copyright__icon" width="27" height="34">
-          <use xlink:href="img/sprite.svg#htmlacademy"></use>
-        </svg>
+    <header class="page-header">
+      <a class="page-header__logo" href="index.html">
+        <picture>
+          <source media="(min-width: 1200px)" srcset="img/vector/logo-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/vector/logo-tablet.svg">
+          <img class="page-header__logo-image" src="img/vector/logo-mobile.svg" width="102" height="84"
+            alt="Логотип города Седоны">
+        </picture>
       </a>
-    </div>
-  </footer>
+      <nav class="page-header__main-nav main-nav main-nav--nojs">
+        <ul class="main-nav__list">
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="index.html">Главная</a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="catalog.html">Фото и видео</a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="form.html">Форма отзыва</a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="#">HTML Academy</a>
+          </li>
+        </ul>
+        <button class="main-nav__toggle">
+          <span class="visually-hidden">Закрыть</span>
+        </button>
+      </nav>
+      <div class="page-header__intro intro intro--short">
+        <img class="intro__slogan intro__slogan--short" src="img/vector/intro-text-inner.svg"
+          alt="Приветствие города Седоны">
+      </div>
+    </header>
+
+    <main class="page-main">
+      <h1 class="page-main__heading">Фото и видео</h1>
+      <p class="page-main__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о
+        политике
+        и экономике.</p>
+      <section class="photos">
+        <h2 class="visually-hidden">Фотографии</h2>
+        <ul class="photos__list">
+          <li class="photos__item photos__item--top">
+            <div class="photos__image-wrapper">
+              <picture>
+                <source media="(min-width: 768px)"
+                  srcset="img/photos/photo-1-desktop.jpg 1x, img/photos/photo-1-desktop@2x.jpg 2x">
+                <img class="photos__image" src="img/photos/photo-1-mobile.jpg"
+                  srcset="img/photos/photo-1-mobile@2x.jpg 2x" alt="Пейзаж окрестностей Седоны в закат">
+              </picture>
+            </div>
+            <div class="photos__wrapper">
+              <div class="photos__text-wrapper">
+                <h3 class="photos__title">Неродные просторы</h3>
+                <p class="photos__author">Автор фото: Борис</p>
+              </div>
+              <button class="photos__likes-button">
+                <span class="photos__likes-number">1350</span>
+              </button>
+            </div>
+          </li>
+          <li class="photos__item">
+            <div class="photos__image-wrapper">
+              <picture>
+                <source media="(min-width: 768px)"
+                  srcset="img/photos/photo-2-desktop.jpg 1x, img/photos/photo-2-desktop@2x.jpg 2x">
+                <img class="photos__image" src="img/photos/photo-2-mobile.jpg"
+                  srcset="img/photos/photo-2-mobile@2x.jpg 2x" alt="Флора Седоны">
+              </picture>
+            </div>
+            <div class="photos__wrapper">
+              <div class="photos__text-wrapper">
+                <h3 class="photos__title">Местная растительность</h3>
+                <p class="photos__author">Автор фото: Сергей</p>
+              </div>
+              <button class="photos__likes-button">
+                <span class="photos__likes-number">143</span>
+              </button>
+            </div>
+          </li>
+          <li class="photos__item">
+            <div class="photos__image-wrapper">
+              <picture>
+                <source media="(min-width: 768px)"
+                  srcset="img/photos/photo-3-desktop.jpg 1x, img/photos/photo-3-desktop@2x.jpg 2x">
+                <img class="photos__image" src="img/photos/photo-3-mobile.jpg"
+                  srcset="img/photos/photo-3-mobile@2x.jpg 2x" alt="Дорога за пределами Седоны">
+              </picture>
+            </div>
+            <div class="photos__wrapper">
+              <div class="photos__text-wrapper">
+                <h3 class="photos__title">Дорога на север</h3>
+                <p class="photos__author">Автор фото: Петр</p>
+              </div>
+              <button class="photos__likes-button">
+                <span class="photos__likes-number">96</span>
+              </button>
+            </div>
+          </li>
+          <li class="photos__item">
+            <div class="photos__image-wrapper">
+              <picture>
+                <source media="(min-width: 768px)"
+                  srcset="img/photos/photo-4-desktop.jpg 1x, img/photos/photo-4-desktop@2x.jpg 2x">
+                <img class="photos__image" src="img/photos/photo-4-mobile.jpg"
+                  srcset="img/photos/photo-4-mobile@2x.jpg 2x" alt="Вид на мост Дьявола">
+              </picture>
+            </div>
+            <div class="photos__wrapper">
+              <div class="photos__text-wrapper">
+                <h3 class="photos__title">Мост дьявола</h3>
+                <p class="photos__author">Автор фото: Антон</p>
+              </div>
+              <button class="photos__likes-button">
+                <span class="photos__likes-number">254</span>
+              </button>
+            </div>
+          </li>
+        </ul>
+      </section>
+      <section class="video-presentation">
+        <h2 class="visually-hidden">Видеопрезентация</h2>
+        <p class="video-presentation__doubts">Все еще сомневаетесь?</p>
+        <p class="video-presentation__watch">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в
+          очередной раз!</p>
+
+        <picture>
+          <source media="(min-width: 1200px)"
+            srcset="img/photos/video-desktop.jpg 1x, img/photos/video-desktop@2x.jpg 2x">
+          <source media="(min-width: 768px)" srcset="img/photos/video-tablet.jpg 1x, img/photos/video-tablet@2x.jpg 2x">
+          <img class="video-presentation__preview" src="img/photos/video-mobile.jpg"
+            srcset="img/photos/video-mobile@2x.jpg 2x" alt="Обложка видеопрезентации">
+        </picture>
+
+        <video class="video-presentation__clip">
+
+
+          <!-- Тут надо стилизовать видео -->
+        </video>
+
+      </section>
+
+    </main>
+
+    <footer class="footer">
+      <a class="footer__tag" href="#">#visitsedona</a>
+      <ul class="footer__social social">
+        <li class="social__item">
+          <a class="social__link" aria-label="Мы в Твиттере">
+            <svg width="18" height="15">
+              <use xlink:href="img/sprite.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link" aria-label="Мы в Фейсбуке">
+            <svg width="9" height="19">
+              <use xlink:href="img/sprite.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link" aria-label="Мы в Ютубе">
+            <svg width="20" height="14">
+              <use xlink:href="img/sprite.svg#icon-youtube"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+      <div class="footer__copyright copyright">
+        <p class="copyright__text">Разработано</p>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"
+          aria-label="Онлайн-курс HTML Academy «Адаптивная вёрстка сайтов и автоматизация»">
+          <svg class="copyright__icon" width="27" height="34">
+            <use xlink:href="img/sprite.svg#htmlacademy"></use>
+          </svg>
+        </a>
+      </div>
+    </footer>
+
+  </div>
   <script src="js/script.js" type="module"></script>
 </body>
 
