--- a/source/form.html
+++ b/source/form.html
@@ -10,150 +10,158 @@
 </head>
 
 <body class="page__body">
-  <header class="page-header">
-    <a class="page-header__logo" href="index.html">
-      <picture>
-        <source media="(min-width: 1200px)" srcset="img/vector/logo-desktop.svg">
-        <source media="(min-width: 768px)" srcset="img/vector/logo-tablet.svg">
-        <img class="page-header__logo-image" src="img/vector/logo-mobile.svg" width="102" height="84"
-          alt="Логотип города Седоны">
-      </picture>
-    </a>
-    <nav class="page-header__main-nav main-nav main-nav--nojs">
-      <ul class="main-nav__list">
-        <li class="main-nav__item">
-          <a class="main-nav__link" href="index.html">Главная</a>
+
+  <div class="container">
+
+    <header class="page-header">
+      <a class="page-header__logo" href="index.html">
+        <picture>
+          <source media="(min-width: 1200px)" srcset="img/vector/logo-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/vector/logo-tablet.svg">
+          <img class="page-header__logo-image" src="img/vector/logo-mobile.svg" width="102" height="84"
+            alt="Логотип города Седоны">
+        </picture>
+      </a>
+      <nav class="page-header__main-nav main-nav main-nav--nojs">
+        <ul class="main-nav__list">
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="index.html">Главная</a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="catalog.html">Фото и видео</a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="form.html">Форма отзыва</a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="#">HTML Academy</a>
+          </li>
+        </ul>
+        <button class="main-nav__toggle">
+          <span class="visually-hidden">Закрыть</span>
+        </button>
+      </nav>
+      <div class="page-header__intro intro intro--short">
+        <img class="intro__slogan intro__slogan--short" src="img/vector/intro-text-inner.svg"
+          alt="Приветствие города Седоны">
+      </div>
+    </header>
+
+    <main class="page-main">
+      <h1 class="visually-hidden">Форма отзыва</h1>
+      <section class="review">
+        <h2 class="review__title">Оставьте свой отзыв</h2>
+        <p class="review__description">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещенных
+          вами
+          достопримечательностях</p>
+        <form class="review__form" action="https://echo.htmlacademy.ru" method="POST">
+          <div class="review__fieldset-wrapper">
+            <fieldset class="review__fieldset">
+              <legend class="review__legend">Представьтесь:</legend>
+              <div class="review__input-wrapper">
+                <label class="review__label" for="first-name">Имя*:</label>
+                <input class="review__input" id="first-name" type="text" name="user-first-name" placeholder="Петр"
+                  required>
+              </div>
+              <div class="review__input-wrapper">
+                <label class="review__label" for="last-name">Фамилия*:</label>
+                <input class="review__input" id="last-name" type="text" name="user-last-name" placeholder="Иванов"
+                  required>
+              </div>
+              <div class="review__input-wrapper">
+                <label class="review__label" for="paternal-name">Отчество:</label>
+                <input class="review__input" id="paternal-name" type="text" name="user-paternal-name"
+                  placeholder="Александрович">
+              </div>
+            </fieldset>
+            <fieldset class="review__fieldset">
+              <legend class="review__legend">Контактная информация:</legend>
+              <label class="review__label review__label--info" for="phone-number">Контактный телефон*:</label>
+              <input class="review__input review__input--info" id="phone-number" type="tel" name="user-phone-number"
+                placeholder="Введите телефон" required>
+              <label class="review__label review__label--info" for="email-address">Электронная почта*:</label>
+              <input class="review__input review__input--info" id="email-address" type="email" name="user-email"
+                placeholder="Введите e-mail" required>
+            </fieldset>
+            <fieldset class="review__fieldset review__fieldset--impression">
+              <legend class="review__legend">Ваше общее впечатление:</legend>
+              <div class="review__wrapper">
+                <input class="review__radio visually-hidden" id="good-impression" type="radio" name="impression"
+                  checked>
+                <label class="review__label-choice" for="good-impression">Скорее положительное</label>
+                <input class="review__radio visually-hidden" id="bad-impression" type="radio" name="impression">
+                <label class="review__label-choice" for="bad-impression">Скорее отрицательное</label>
+                <input class="review__radio visually-hidden" id="unclear-impression" type="radio" name="impression">
+                <label class="review__label-choice" for="unclear-impression">Затрудняюсь ответить</label>
+              </div>
+            </fieldset>
+            <fieldset class="review__fieldset">
+              <legend class="review__legend">Посещенные достопримечательности:</legend>
+              <div class="review__wrapper review__wrapper--checkbox">
+                <input class="review__checkbox visually-hidden" id="devils-bridge" type="checkbox" name="devils-bridge"
+                  checked>
+                <label class="review__label-choice review__label-choice--checkbox" for="devils-bridge">Мост
+                  Дьявола</label>
+                <input class="review__checkbox visually-hidden" id="bell-mountain" type="checkbox" name="bell-mountain"
+                  checked>
+                <label class="review__label-choice review__label-choice--checkbox"
+                  for="bell-mountain">Гора-Колокол</label>
+                <input class="review__checkbox visually-hidden" id="slide-park" type="checkbox" name="slide-park"
+                  checked>
+                <label class="review__label-choice review__label-choice--checkbox" for="slide-park">Слайд-парк</label>
+                <input class="review__checkbox visually-hidden" id="red-mountains" type="checkbox" name="red-mountains">
+                <label class="review__label-choice review__label-choice--checkbox" for="red-mountains">Красные
+                  скалы</label>
+              </div>
+            </fieldset>
+            <fieldset class="review__fieldset">
+              <legend class="review__legend">Опишите свои эмоции:</legend>
+              <textarea class="review__details" placeholder="Опишите подробно все свои восторги"></textarea>
+            </fieldset>
+          </div>
+          <button class="review__send button">Отправить отзыв</button>
+        </form>
+      </section>
+
+    </main>
+
+    <footer class="footer">
+      <a class="footer__tag" href="#">#visitsedona</a>
+      <ul class="footer__social social">
+        <li class="social__item">
+          <a class="social__link" aria-label="Мы в Твиттере">
+            <svg width="18" height="15">
+              <use xlink:href="img/sprite.svg#icon-twitter"></use>
+            </svg>
+          </a>
         </li>
-        <li class="main-nav__item">
-          <a class="main-nav__link" href="catalog.html">Фото и видео</a>
+        <li class="social__item">
+          <a class="social__link" aria-label="Мы в Фейсбуке">
+            <svg width="9" height="19">
+              <use xlink:href="img/sprite.svg#icon-facebook"></use>
+            </svg>
+          </a>
         </li>
-        <li class="main-nav__item">
-          <a class="main-nav__link" href="form.html">Форма отзыва</a>
-        </li>
-        <li class="main-nav__item">
-          <a class="main-nav__link" href="#">HTML Academy</a>
+        <li class="social__item">
+          <a class="social__link" aria-label="Мы в Ютубе">
+            <svg width="20" height="14">
+              <use xlink:href="img/sprite.svg#icon-youtube"></use>
+            </svg>
+          </a>
         </li>
       </ul>
-      <button class="main-nav__toggle">
-        <span class="visually-hidden">Закрыть</span>
-      </button>
-    </nav>
-    <div class="page-header__intro intro intro--short">
-      <img class="intro__slogan intro__slogan--short" src="img/vector/intro-text-inner.svg"
-        alt="Приветствие города Седоны">
-    </div>
-  </header>
-
-  <main class="page-main">
-    <h1 class="visually-hidden">Форма отзыва</h1>
-    <section class="review">
-      <h2 class="review__title">Оставьте свой отзыв</h2>
-      <p class="review__description">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещенных вами
-        достопримечательностях</p>
-      <form class="review__form" action="https://echo.htmlacademy.ru" method="POST">
-        <div class="review__fieldset-wrapper">
-          <fieldset class="review__fieldset">
-            <legend class="review__legend">Представьтесь:</legend>
-            <div class="review__input-wrapper">
-              <label class="review__label" for="first-name">Имя*:</label>
-              <input class="review__input" id="first-name" type="text" name="user-first-name" placeholder="Петр"
-                required>
-            </div>
-            <div class="review__input-wrapper">
-              <label class="review__label" for="last-name">Фамилия*:</label>
-              <input class="review__input" id="last-name" type="text" name="user-last-name" placeholder="Иванов"
-                required>
-            </div>
-            <div class="review__input-wrapper">
-              <label class="review__label" for="paternal-name">Отчество:</label>
-              <input class="review__input" id="paternal-name" type="text" name="user-paternal-name"
-                placeholder="Александрович">
-            </div>
-          </fieldset>
-          <fieldset class="review__fieldset">
-            <legend class="review__legend">Контактная информация:</legend>
-            <label class="review__label review__label--info" for="phone-number">Контактный телефон*:</label>
-            <input class="review__input review__input--info" id="phone-number" type="tel" name="user-phone-number"
-              placeholder="Введите телефон" required>
-            <label class="review__label review__label--info" for="email-address">Электронная почта*:</label>
-            <input class="review__input review__input--info" id="email-address" type="email" name="user-email"
-              placeholder="Введите e-mail" required>
-          </fieldset>
-          <fieldset class="review__fieldset review__fieldset--impression">
-            <legend class="review__legend">Ваше общее впечатление:</legend>
-            <div class="review__wrapper">
-              <input class="review__radio visually-hidden" id="good-impression" type="radio" name="impression" checked>
-              <label class="review__label-choice" for="good-impression">Скорее положительное</label>
-              <input class="review__radio visually-hidden" id="bad-impression" type="radio" name="impression">
-              <label class="review__label-choice" for="bad-impression">Скорее отрицательное</label>
-              <input class="review__radio visually-hidden" id="unclear-impression" type="radio" name="impression">
-              <label class="review__label-choice" for="unclear-impression">Затрудняюсь ответить</label>
-            </div>
-          </fieldset>
-          <fieldset class="review__fieldset">
-            <legend class="review__legend">Посещенные достопримечательности:</legend>
-            <div class="review__wrapper review__wrapper--checkbox">
-              <input class="review__checkbox visually-hidden" id="devils-bridge" type="checkbox" name="devils-bridge"
-                checked>
-              <label class="review__label-choice review__label-choice--checkbox" for="devils-bridge">Мост
-                Дьявола</label>
-              <input class="review__checkbox visually-hidden" id="bell-mountain" type="checkbox" name="bell-mountain"
-                checked>
-              <label class="review__label-choice review__label-choice--checkbox"
-                for="bell-mountain">Гора-Колокол</label>
-              <input class="review__checkbox visually-hidden" id="slide-park" type="checkbox" name="slide-park" checked>
-              <label class="review__label-choice review__label-choice--checkbox" for="slide-park">Слайд-парк</label>
-              <input class="review__checkbox visually-hidden" id="red-mountains" type="checkbox" name="red-mountains">
-              <label class="review__label-choice review__label-choice--checkbox" for="red-mountains">Красные
-                скалы</label>
-            </div>
-          </fieldset>
-          <fieldset class="review__fieldset">
-            <legend class="review__legend">Опишите свои эмоции:</legend>
-            <textarea class="review__details" placeholder="Опишите подробно все свои восторги"></textarea>
-          </fieldset>
-        </div>
-        <button class="review__send button">Отправить отзыв</button>
-      </form>
-    </section>
-
-  </main>
-
-  <footer class="footer">
-    <a class="footer__tag" href="#">#visitsedona</a>
-    <ul class="footer__social social">
-      <li class="social__item">
-        <a class="social__link" aria-label="Мы в Твиттере">
-          <svg width="18" height="15">
-            <use xlink:href="img/sprite.svg#icon-twitter"></use>
+      <div class="footer__copyright copyright">
+        <p class="copyright__text">Разработано</p>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"
+          aria-label="Онлайн-курс HTML Academy «Адаптивная вёрстка сайтов и автоматизация»">
+          <svg class="copyright__icon" width="27" height="34">
+            <use xlink:href="img/sprite.svg#htmlacademy"></use>
           </svg>
         </a>
-      </li>
-      <li class="social__item">
-        <a class="social__link" aria-label="Мы в Фейсбуке">
-          <svg width="9" height="19">
-            <use xlink:href="img/sprite.svg#icon-facebook"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="social__item">
-        <a class="social__link" aria-label="Мы в Ютубе">
-          <svg width="20" height="14">
-            <use xlink:href="img/sprite.svg#icon-youtube"></use>
-          </svg>
-        </a>
-      </li>
-    </ul>
-    <div class="footer__copyright copyright">
-      <p class="copyright__text">Разработано</p>
-      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"
-        aria-label="Онлайн-курс HTML Academy «Адаптивная вёрстка сайтов и автоматизация»">
-        <svg class="copyright__icon" width="27" height="34">
-          <use xlink:href="img/sprite.svg#htmlacademy"></use>
-        </svg>
-      </a>
-    </div>
-  </footer>
+      </div>
+    </footer>
+
+  </div>
 
   <script src="js/script.js" type="module"></script>
 </body>
