--- a/source/index.html
+++ b/source/index.html
@@ -10,166 +10,171 @@
 </head>
 
 <body class="page__body">
-  <header class="page-header">
-    <a class="page-header__logo">
-      <picture>
-        <source media="(min-width: 1200px)" srcset="img/vector/logo-desktop.svg">
-        <source media="(min-width: 768px)" srcset="img/vector/logo-tablet.svg">
-        <img class="page-header__logo-image" src="img/vector/logo-mobile.svg" width="102" height="84"
-          alt="Логотип города Седоны">
-      </picture>
-    </a>
-    <nav class="page-header__main-nav main-nav main-nav--nojs">
-      <ul class="main-nav__list">
-        <li class="main-nav__item">
-          <a class="main-nav__link" href="index.html">Главная</a>
+  <div class="container">
+
+    <header class="page-header">
+      <a class="page-header__logo">
+        <picture>
+          <source media="(min-width: 1200px)" srcset="img/vector/logo-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/vector/logo-tablet.svg">
+          <img class="page-header__logo-image" src="img/vector/logo-mobile.svg" width="102" height="84"
+            alt="Логотип города Седоны">
+        </picture>
+      </a>
+      <nav class="page-header__main-nav main-nav main-nav--nojs">
+        <ul class="main-nav__list">
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="index.html">Главная</a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="catalog.html">Фото и видео</a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="form.html">Форма отзыва</a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="#">HTML Academy</a>
+          </li>
+        </ul>
+        <button class="main-nav__toggle">
+          <span class="visually-hidden">Закрыть</span>
+        </button>
+      </nav>
+      <div class="page-header__intro intro">
+        <img class="intro__slogan" src="img/vector/intro-text-index.svg" alt="Приветствие города Седоны">
+      </div>
+    </header>
+
+    <main class="page-main">
+      <h1 class="visually-hidden">Информация о городе Седона, штат Аризона</h1>
+      <p class="page-main__slogan">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+      <section class="advantages">
+        <h2 class="visually-hidden">Преимущества</h2>
+        <p class="advantages__text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+        <ol class="advantages__list">
+          <li class="advantages__item advantages__item--detailed">
+            <div class="advantages__item-wrapper">
+              <div class="advantages__text-wrapper">
+                <h3 class="advantages__title">Настоящий городок</h3>
+                <p class="advantages__number">&#8212; №1 &#8212;</p>
+                <p class="advantages__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
+              </div>
+              <div class="advantages__photo-wrapper">
+                <picture>
+                  <source media="(min-width: 1200px)"
+                    srcset="img/photos/city-desktop.jpg 1x, img/photos/city-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)"
+                    srcset="img/photos/city-tablet.jpg 1x, img/photos/city-tablet@2x.jpg 2x">
+                  <img class="advantages__photo" src="img/photos/city-mobile.jpg"
+                    srcset="img/photos/city-mobile@2x.jpg 2x" alt="На улицах города Седона">
+                </picture>
+              </div>
+            </div>
+            <ul class="advantages__services services">
+              <li class="services__item services__item--housing">
+                <h4 class="services__title">Жилье</h4>
+                <p class="services__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+              </li>
+              <li class="services__item services__item--souvenirs">
+                <h4 class="services__title">Сувениры</h4>
+                <p class="services__description">Не только китайского,<br> но и местного производства!</p>
+              </li>
+              <li class="services__item services__item--food">
+                <h4 class="services__title">Еда</h4>
+                <p class="services__description">Всегда заказывайте фирменный бургер,<br> вы не разочаруетесь!</p>
+              </li>
+            </ul>
+          </li>
+          <li class="advantages__item advantages__item--detailed">
+            <div class="advantages__item-wrapper">
+              <div class="advantages__text-wrapper">
+                <h3 class="advantages__title">Там есть мост дьявола</h3>
+                <p class="advantages__number">&#8212; №2 &#8212;</p>
+                <p class="advantages__description">Да, по нему можно пройти!<br> Если вы осмелитесь, конечно</p>
+              </div>
+              <div class="advantages__photo-wrapper">
+                <picture>
+                  <source media="(min-width: 1200px)"
+                    srcset="img/photos/bridge-desktop.jpg 1x, img/photos/bridge-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)"
+                    srcset="img/photos/bridge-tablet.jpg 1x, img/photos/bridge-tablet@2x.jpg 2x">
+                  <img class="advantages__photo" src="img/photos/bridge-mobile.jpg"
+                    srcset="img/photos/bridge-mobile@2x.jpg 2x" alt="Вид на мост Дьявола">
+                </picture>
+              </div>
+            </div>
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title">Небольшая площадь</h3>
+            <p class="advantages__number">&#8212; №3 &#8212;</p>
+            <p class="advantages__description">Все интересные места находятся очень близко</p>
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title">Красивая дорога</h3>
+            <p class="advantages__number">&#8212; №4 &#8212;</p>
+            <p class="advantages__description">Ехать в Седону из Лас&#8209;Вегаса совсем не&nbsp;скучно!</p>
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title">Мало туристов</h3>
+            <p class="advantages__number">&#8212; №5 &#8212;</p>
+            <p class="advantages__description">Большинство едет в Гранд Каньон и толпится там</p>
+          </li>
+        </ol>
+      </section>
+      <section class="hotel-search">
+        <h2 class="visually-hidden">Поиск гостиницы</h2>
+        <p class="hotel-search__question">Заинтересовались?</p>
+        <p class="hotel-search__text">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения
+          гостиниц в Седоне</p>
+        <a class="hotel-search__link button" href="#">Найти гостиницу</a>
+      </section>
+      <div class="page-main__map">
+        <picture>
+          <source media="(min-width: 768px)" srcset="img/map-tablet.jpg 1x, img/map-tablet@2x.jpg 2x">
+          <img class="page-main__map-image" src="img/map-mobile.jpg" srcset="img/map-mobile@2x.jpg 2x" width="768"
+            height="350" alt="Седона, Аризона, Соединенные Штаты Америки">
+        </picture>
+      </div>
+    </main>
+
+    <footer class="footer">
+      <a class="footer__tag" href="#">#visitsedona</a>
+      <ul class="footer__social social">
+        <li class="social__item">
+          <a class="social__link" aria-label="Мы в Твиттере">
+            <svg width="18" height="15">
+              <use xlink:href="img/sprite.svg#icon-twitter"></use>
+            </svg>
+          </a>
         </li>
-        <li class="main-nav__item">
-          <a class="main-nav__link" href="catalog.html">Фото и видео</a>
+        <li class="social__item">
+          <a class="social__link" aria-label="Мы в Фейсбуке">
+            <svg width="9" height="19">
+              <use xlink:href="img/sprite.svg#icon-facebook"></use>
+            </svg>
+          </a>
         </li>
-        <li class="main-nav__item">
-          <a class="main-nav__link" href="form.html">Форма отзыва</a>
-        </li>
-        <li class="main-nav__item">
-          <a class="main-nav__link" href="#">HTML Academy</a>
+        <li class="social__item">
+          <a class="social__link" aria-label="Мы в Ютубе">
+            <svg width="20" height="14">
+              <use xlink:href="img/sprite.svg#icon-youtube"></use>
+            </svg>
+          </a>
         </li>
       </ul>
-      <button class="main-nav__toggle">
-        <span class="visually-hidden">Закрыть</span>
-      </button>
-    </nav>
-    <div class="page-header__intro intro">
-      <img class="intro__slogan" src="img/vector/intro-text-index.svg" alt="Приветствие города Седоны">
-    </div>
-  </header>
+      <div class="footer__copyright copyright">
+        <p class="copyright__text">Разработано</p>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"
+          aria-label="Онлайн-курс HTML Academy «Адаптивная вёрстка сайтов и автоматизация»">
+          <svg class="copyright__icon" width="27" height="34">
+            <use xlink:href="img/sprite.svg#htmlacademy"></use>
+          </svg>
+        </a>
+      </div>
+    </footer>
 
-  <main class="page-main">
-    <h1 class="visually-hidden">Информация о городе Седона, штат Аризона</h1>
-    <p class="page-main__slogan">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
-    <section class="advantages">
-      <h2 class="visually-hidden">Преимущества</h2>
-      <p class="advantages__text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
-      <ol class="advantages__list">
-        <li class="advantages__item advantages__item--detailed">
-          <div class="advantages__item-wrapper">
-            <div class="advantages__text-wrapper">
-              <h3 class="advantages__title">Настоящий городок</h3>
-              <p class="advantages__number">№1</p>
-              <p class="advantages__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
-            </div>
-            <div class="advantages__photo-wrapper">
-              <picture>
-                <source media="(min-width: 1200px)"
-                  srcset="img/photos/city-desktop.jpg 1x, img/photos/city-desktop@2x.jpg 2x">
-                <source media="(min-width: 768px)"
-                  srcset="img/photos/city-tablet.jpg 1x, img/photos/city-tablet@2x.jpg 2x">
-                <img class="advantages__photo" src="img/photos/city-mobile.jpg"
-                  srcset="img/photos/city-mobile@2x.jpg 2x" alt="На улицах города Седона">
-              </picture>
-            </div>
-          </div>
-          <ul class="advantages__services services">
-            <li class="services__item services__item--housing">
-              <h4 class="services__title">Жилье</h4>
-              <p class="services__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-            </li>
-            <li class="services__item services__item--souvenirs">
-              <h4 class="services__title">Сувениры</h4>
-              <p class="services__description">Не только китайского, но и местного производства!</p>
-            </li>
-            <li class="services__item services__item--food">
-              <h4 class="services__title">Еда</h4>
-              <p class="services__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-            </li>
-          </ul>
-        </li>
-        <li class="advantages__item advantages__item--detailed">
-          <div class="advantages__item-wrapper">
-            <div class="advantages__text-wrapper">
-              <h3 class="advantages__title">Там есть мост дьявола</h3>
-              <p class="advantages__number">№2</p>
-              <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-            </div>
-            <div class="advantages__photo-wrapper">
-              <picture>
-                <source media="(min-width: 1200px)"
-                  srcset="img/photos/bridge-desktop.jpg 1x, img/photos/bridge-desktop@2x.jpg 2x">
-                <source media="(min-width: 768px)"
-                  srcset="img/photos/bridge-tablet.jpg 1x, img/photos/bridge-tablet@2x.jpg 2x">
-                <img class="advantages__photo" src="img/photos/bridge-mobile.jpg"
-                  srcset="img/photos/bridge-mobile@2x.jpg 2x" alt="Вид на мост Дьявола">
-              </picture>
-            </div>
-          </div>
-        </li>
-        <li class="advantages__item">
-          <h3 class="advantages__title">Небольшая площадь</h3>
-          <p class="advantages__number">№3</p>
-          <p class="advantages__description">Все интересные места находятся очень близко</p>
-        </li>
-        <li class="advantages__item">
-          <h3 class="advantages__title">Красивая дорога</h3>
-          <p class="advantages__number">№4</p>
-          <p class="advantages__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-        </li>
-        <li class="advantages__item">
-          <h3 class="advantages__title">Мало туристов</h3>
-          <p class="advantages__number">№5</p>
-          <p class="advantages__description">Большинство едет в Гранд Каньон и толпится там</p>
-        </li>
-      </ol>
-    </section>
-    <section class="hotel-search container">
-      <h2 class="visually-hidden">Поиск гостиницы</h2>
-      <p class="hotel-search__question">Заинтересовались?</p>
-      <p class="hotel-search__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в
-        Седоне</p>
-      <a class="hotel-search__link button" href="#">Найти гостиницу</a>
-    </section>
-    <div class="page-main__map">
-      <picture>
-        <source media="(min-width: 768px)" srcset="img/map-tablet.jpg 1x, img/map-tablet@2x.jpg 2x">
-        <img class="page-main__map-image" src="img/map-mobile.jpg" srcset="img/map-mobile@2x.jpg 2x" width="768"
-          height="350" alt="Седона, Аризона, Соединенные Штаты Америки">
-      </picture>
-    </div>
-  </main>
+  </div>
 
-  <footer class="footer">
-    <a class="footer__tag" href="#">#visitsedona</a>
-    <ul class="footer__social social">
-      <li class="social__item">
-        <a class="social__link" aria-label="Мы в Твиттере">
-          <svg width="18" height="15">
-            <use xlink:href="img/sprite.svg#icon-twitter"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="social__item">
-        <a class="social__link" aria-label="Мы в Фейсбуке">
-          <svg width="9" height="19">
-            <use xlink:href="img/sprite.svg#icon-facebook"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="social__item">
-        <a class="social__link" aria-label="Мы в Ютубе">
-          <svg width="20" height="14">
-            <use xlink:href="img/sprite.svg#icon-youtube"></use>
-          </svg>
-        </a>
-      </li>
-    </ul>
-    <div class="footer__copyright copyright">
-      <p class="copyright__text">Разработано</p>
-      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"
-        aria-label="Онлайн-курс HTML Academy «Адаптивная вёрстка сайтов и автоматизация»">
-        <svg class="copyright__icon" width="27" height="34">
-          <use xlink:href="img/sprite.svg#htmlacademy"></use>
-        </svg>
-      </a>
-    </div>
-  </footer>
   <!-- <section class="modal">
     <h2 class="modal__heading">Бизнес-тарифы</h2>
   </section> -->
